--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
 </head>
 
 <body>
+  <div class="yoda">
+    
+  </div>
   <h3>Yoda Speak generator</h3>
   <input type="text" name="normal" value="" id="input-text">
   <input type="button" value="click" id="yod-btn">
