put PAG in html

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <body>
   <div class="yoda">
-    
+    <img src="./PAG.jpg" alt="PAG" />
   </div>
   <h3>Yoda Speak generator</h3>
   <input type="text" name="normal" value="" id="input-text">
