added text to speech api

--- a/index.html
+++ b/index.html
@@ -46,4 +46,6 @@
 </body>
 <script src="https:/code.jquery.com/jquery-2.2.4.min.js"> </script>
 <script type="text/javascript" src="./script.js"></script>
+<!-- voice over -->
+<script src="http://code.responsivevoice.org/responsivevoice.js"></script>
 </html>
