--- a/index.html
+++ b/index.html
@@ -47,5 +47,5 @@
 <script src="https:/code.jquery.com/jquery-2.2.4.min.js"> </script>
 <script type="text/javascript" src="./script.js"></script>
 <!-- voice over -->
-<script src="http://code.responsivevoice.org/responsivevoice.js"></script>
+<script src="https://code.responsivevoice.org/responsivevoice.js"></script>
 </html>
